  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
mm/dd/yy richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
         PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
         Yuan-Yu, xiki-tempula, HTian1997, Iv-Hristov, hmacdope, AnshulAngaria

  * 0.21.0

Fixes
  * Fixed mda.Merge for Universes without coordinates (Issue #2470)(PR #2580)
  * PCA(align=True) now correctly aligns the trajectory and computes the
    correct means and covariance matrix (Issue #2561)
  * Correct args order of base.AnalysisFromFunction (Issue #2503)  
  * encore.dres() returns dimensionality reduction details instead of a
    reference to itself (Issue #2471)
  * Handle exception when PDBWriter is trying to remove an invalid StringIO
    (Issue #2512)
  * Clarifies density_from_Universe docs and adds user warning (Issue #2372)
  * Fix upstream deprecation of `matplotlib.axis.Tick` attributes in 
    `MDAnalysis.analysis.psa`
  * PDBWriter now uses first character of segid as ChainID (Issue #2224)
  * Adds a more detailed warning when attempting to read chamber-style parm7
    files (Issue #2475)
  * ClusterCollection.get_ids now returns correctly (Issue #2464)
  * Removes files for stubs mainly introduced in 0.11.0 (Issue #2443)
  * Removes support for reading AMBER NetCDF files with `cell_angle` units set
    to `degrees` instead of the convention agreed `degree` (Issue #2327). 
  * Removes the MassWeight option from gnm (PR #2479).
  * AtomGroup.guess_bonds now uses periodic boundary information when available
    (Issue #2350)
  * Chainreader and continuous option work correctly when readers work for more
    than one format (Issue #2353)
  * PDBQTParser now gives icode TopologyAttrs (Issue #2361)
  * GROReader and GROWriter now can handle boxes with box vectors >1000nm