@@ -133,6 +133,7 @@ Chronological list of authors
   - Hao Tian
   - Hugo MacDermott-Opeskin
   - Anshul Angaria
+  - Shubham Sharma
 
 
 
